services/ceph.yml
# This is for connecting an external Ceph instance to Kubernetes
# Not needed if just using Rook for Ceph in Kubernetes
# https://github.com/kubernetes-incubator/external-storage/tree/master/ceph/rbd/deploy/rbac
###
# Storage
###
---
# Create RBD provisioner deployment
# The Rados Block Device (RBD) provisioner creates persistent volumes on demand
# and hands them out
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: rbd-provisioner
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rbd-provisioner
    spec:
      containers:
      - name: rbd-provisioner
        image: "quay.io/external_storage/rbd-provisioner:latest"
      serviceAccount: rbd-provisioner
