services/dgxie.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dgxie
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dgxie
    spec:
      hostNetwork: true
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      containers:
        - name: dgxie
          image: dgxie:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          volumeMounts:
            # Path for DHCP host-specific config, DO NOT MODIFY
            - name: dhcp-config-volume
              mountPath: "/etc/dnsmasq.d"
            #- name: pxe-config-volume
            #  mountPath: /tftpboot/pxelinux.cfg
            # Path for NFS mount, DO NOT MODIFY
            - name: nfs
              mountPath: "/nfs"
      volumes:
        - name: dhcp-config-volume
          configMap:
            name: dhcpd
        - name: nfs
          nfs:
            server: nfs-server.default.svc.cluster.local
            path: /
        #- name: pxe-config-volume
        #  configMap:
        #    name: pxe-login
        #    items:
        #    - key: 01-0c-c4-7a-a3-3e-94
        #      path: 01-0c-c4-7a-a3-3e-94
#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: dgx-iso
#  labels:
#    app: dgxie
#  annotations:
#    volume.alpha.kubernetes.io/storage-class: default
#spec:
#  storageClassName: rook-ceph-block
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 4Gi
