services/iso-loader.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: iso-loader
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: iso-loader
    spec:
      containers:
      - name: iso-loader
        image: ubuntu:16.04
        # /bin/bash -c "trap : TERM INT; sleep infinity & wait"
        command: ["/bin/bash", "-c", "--"]
        args: ["trap : TERM INT; mkdir -p /data/iso; sleep infinity & wait"]
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: cephfs
          mountPath: /data
      volumes:
      - name: cephfs
        flexVolume:
          driver: ceph.rook.io/rook
          fsType: ceph
          options:
            fsName: cephfs
            clusterName: rook-ceph
