services/apt.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apt-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: apt
    spec:
      containers:
      - name: apt-server
        image: deepops/build-packages/deepops_apt
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apt-server
spec:
  selector:
    app: apt
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apt-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: apt.mgmt.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: apt-server
          servicePort: 80
