services/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: grafana.mgmt.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
  - host: grafana.mgmt
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
  - host: mgmt.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
  - host: mgmt
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
  - host: mon.mgmt.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
  - host: mon.mgmt
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
  - host: apt.mgmt.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: apt-server
          servicePort: 80
  - host: apt.mgmt
    http:
      paths:
      - path: /
        backend:
          serviceName: apt-server
          servicePort: 80
  - host: alert.mgmt.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
  - host: alert.mgmt
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
